--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,9 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="index.html">
-                <span class="fw-bold text-white startup-logo">Startup Template</span>
+                <img class="startup-logo"
+                src="assets/images/banner/logo.png"
+              />
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -62,9 +64,9 @@
                         </a>
                       </li>
                       <li class="ud-submenu-item">
-                        <a href="pricing.html" class="ud-submenu-link">
+                        <!-- <a href="pricing.html" class="ud-submenu-link">
                           Pricing Page
-                        </a>
+                        </a> -->
                       </li>
                       <li class="ud-submenu-item">
                         <a href="contact.html" class="ud-submenu-link">
@@ -543,12 +545,6 @@
                   <a href="javascript:void(0)">Terms of service</a>
                 </li>
               </ul>
-            </div>
-            <div class="col-md-4">
-              <p class="ud-footer-bottom-right">
-                Designed and Developed by
-                <a href="https://hau.xyz" rel="nofollow">haudev</a>
-              </p>
             </div>
           </div>
         </div>
