--- a/login.html
+++ b/login.html
@@ -27,7 +27,9 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="index.html">
-                <span class="fw-bold text-white startup-logo">Startup Template</span>
+                <img class="startup-logo"
+                src="assets/images/banner/logo.png"
+              />
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -44,9 +46,9 @@
                   <li class="nav-item">
                     <a class="ud-menu-scroll" href="#about">About</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a class="ud-menu-scroll" href="#pricing">Pricing</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                     <a class="ud-menu-scroll" href="#team">Team</a>
                   </li>
@@ -61,11 +63,11 @@
                           About Page
                         </a>
                       </li>
-                      <li class="ud-submenu-item">
+                      <!-- <li class="ud-submenu-item">
                         <a href="pricing.html" class="ud-submenu-link">
                           Pricing Page
                         </a>
-                      </li>
+                      </li> -->
                       <li class="ud-submenu-item">
                         <a href="contact.html" class="ud-submenu-link">
                           Contact Page
@@ -130,7 +132,7 @@
           <div class="col-lg-12">
             <div class="ud-login-wrapper">
               <div class="ud-login-logo">
-                <img src="assets/images/logo/logo-2.svg" alt="logo" />
+                <img src="assets/images/logo/logo.png" alt="logo" />
               </div>
               <form class="ud-login-form">
                 <div class="ud-form-group">
@@ -409,12 +411,6 @@
                   <a href="javascript:void(0)">Terms of service</a>
                 </li>
               </ul>
-            </div>
-            <div class="col-md-4">
-              <p class="ud-footer-bottom-right">
-                Designed and Developed by
-                <a href="https://hau.xyz" rel="nofollow">haudev</a>
-              </p>
             </div>
           </div>
         </div>
