--- a/pricing.html
+++ b/pricing.html
@@ -27,7 +27,9 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="index.html">
-                <span class="fw-bold text-white startup-logo">Startup Template</span>
+                <img class="startup-logo"
+                src="assets/images/banner/logo.png"
+              />
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -62,11 +64,11 @@
                           About Page
                         </a>
                       </li>
-                      <li class="ud-submenu-item">
+                      <!-- <li class="ud-submenu-item">
                         <a href="pricing.html" class="ud-submenu-link">
                           Pricing Page
                         </a>
-                      </li>
+                      </li> -->
                       <li class="ud-submenu-item">
                         <a href="contact.html" class="ud-submenu-link">
                           Contact Page
@@ -256,15 +258,11 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>How to use UIdeck?</span>
+                  <span>How it works?</span>
                 </button>
                 <div id="collapseOne" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.
+                    Just send a quick email to admin@nohasslesourcing.com or fill the request form below with what you’re looking for.
                   </div>
                 </div>
               </div>
@@ -614,12 +612,6 @@
                   <a href="javascript:void(0)">Terms of service</a>
                 </li>
               </ul>
-            </div>
-            <div class="col-md-4">
-              <p class="ud-footer-bottom-right">
-                Designed and Developed by
-                <a href="https://hau.xyz" rel="nofollow">haudev</a>
-              </p>
             </div>
           </div>
         </div>
