--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               <img src="../startup-template/assets/images/pricing/comprehensive-datadase.svg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Comprehensive Database</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">We maintain a robust database of verified L&D trainers, complete with ranking information.</p>
               </div>
             </div>
           </div>
@@ -252,7 +252,7 @@
               <img src="../startup-template/assets/images/pricing/onboarding.svg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Once for all Onboarding</h5>
-                <p class="card-text">Each client is paired with a dedicated relationship manager who provides ongoing support throughout the entire process.</p>
+                <p class="card-text">Clients can onboard NoHassle once and gain access to multiple trainers, eliminating the need to onboard different trainer for each training.</p>
               </div>
             </div>
           </div>
