--- a/index.html
+++ b/index.html
@@ -10,23 +10,21 @@
     <!-- Primary Meta Tags -->
     <meta
       name="title"
-      content="Play - Free Open Source HTML Bootstrap Template by UIdeck"
+      content="NoHaasle | Ultimate Sourcing Partner"
     />
     <meta
       name="description"
-      content="Play - Free Open Source HTML Bootstrap Template by UIdeck Team"
+      content="NoHaasle | Ultimate Sourcing Partner"
     />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://uideck.com/play/" />
     <meta
       property="og:title"
-      content="Play - Free Open Source HTML Bootstrap Template by UIdeck"
+      content="NoHaasle | Ultimate Sourcing Partner"
     />
     <meta
       property="og:description"
-      content="Play - Free Open Source HTML Bootstrap Template by UIdeck Team"
+      content="NoHaasle | Ultimate Sourcing Partner"
     />
     <meta
       property="og:image"
@@ -38,11 +36,11 @@
     <meta property="twitter:url" content="https://uideck.com/play/" />
     <meta
       property="twitter:title"
-      content="Play - Free Open Source HTML Bootstrap Template by UIdeck"
+      content="NoHaasle | Ultimate Sourcing Partner"
     />
     <meta
       property="twitter:description"
-      content="Play - Free Open Source HTML Bootstrap Template by UIdeck Team"
+      content="NoHaasle | Ultimate Sourcing Partner Team"
     />
     <meta
       property="twitter:image"
@@ -100,7 +98,7 @@
                     <a class="ud-menu-scroll" href="#contact">Contact</a>
                   </li>
                   <li class="nav-item">
-                    <a class="ud-submenu-link" href="about.html">Blog</a>
+                    <a class="ud-submenu-link" href="blog.html">Blog</a>
                   </li>
                 </ul>
               </div>
@@ -163,7 +161,7 @@
               <div class="ud-feature-content">
                 <h3 class="ud-feature-title">Shortlist Like a Pro</h3>
                 <p class="ud-feature-desc">
-                  After your initial shortlist, we’ll help you assess the best fits.
+                  We will give a tailored list of trainers and help you shortlist the best fits.
                 </p>
               </div>
             </div>
@@ -277,205 +275,24 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-3">
-            <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-              <div class="card">
-                <div class="card-body btn btn-outline-success">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                    <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                  </svg>
-                  Leadership Development
-                </div>
-              </div>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-              <div class="card">
-                <div class="card-body btn btn-outline-success">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                    <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                  </svg>
-                  Communication Skills
-                </div>
-              </div>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-              <div class="card">
-                  <div class="card-body btn btn-outline-success">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                      <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                    </svg>
-                    Time Management
-                  </div>
-                </div>
-                </div>
-              </div>
-              <div class="col-lg-3">
-                <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-                <div class="card">
-                  <div class="card-body btn btn-outline-success">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                      <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                    </svg>
-                    Emotional Intelligence
-                  </div>
-                </div>
-                </div>
-              </div>
-         </div>
-        <div class="row">
-          <div class="col-lg-3">
-            <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-              <div class="card">
-                <div class="card-body btn btn-outline-success">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                    <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                  </svg>
-                  Conflict Resolution
-                </div>
-              </div>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-              <div class="card">
-                <div class="card-body btn btn-outline-success">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                    <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                  </svg>
-                  Team Building
-                </div>
-              </div>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-              <div class="card">
-                  <div class="card-body btn btn-outline-success">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                      <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                    </svg>
-                    Creativity and Innovation
-                  </div>
-                </div>
-                </div>
-              </div>
-              <div class="col-lg-3">
-                <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-                <div class="card">
-                  <div class="card-body btn btn-outline-success">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                      <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                    </svg>
-                    Customer Service Excellence
-                  </div>
-                </div>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-3">
-                <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-                  <div class="card">
-                    <div class="card-body btn btn-outline-success">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                        <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                      </svg>
-                      Negotiation Skills
-                    </div>
-                  </div>
-                  </div>
-                </div>
-                <div class="col-lg-3">
-                  <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-                  <div class="card">
-                    <div class="card-body btn btn-outline-success">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                        <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                      </svg>
-                      Change Management
-                    </div>
-                  </div>
-                  </div>
-                </div>
-                <div class="col-lg-3">
-                  <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-                  <div class="card">
-                      <div class="card-body btn btn-outline-success">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                          <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                        </svg>
-                        Diversity and Inclusion
-                      </div>
-                    </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-3">
-                    <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-                    <div class="card">
-                      <div class="card-body btn btn-outline-success">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                          <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                        </svg>
-                        Presentation Skills
-                      </div>
-                    </div>
-                    </div>
-                  </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-3">
-                <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-                  <div class="card">
-                    <div class="card-body btn btn-outline-success">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                        <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                      </svg>
-                      Sales Training
-                    </div>
-                  </div>
-                  </div>
-                </div>
-              <div class="col-lg-3">
-                <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-                  <div class="card">
-                    <div class="card-body btn btn-outline-success">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                        <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                      </svg>
-                      Stress Management
-                    </div>
-                  </div>
-                  </div>
-                </div>
-              <div class="col-lg-3">
-                <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-                 <div class="card">
-                     <div class="card-body btn btn-outline-success">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                        <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                      </svg>
-                      Workplace Ethics
-                      </div>
-                    </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-3">
-                    <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
-                     <div class="card">
-                         <div class="card-body btn btn-outline-success">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
-                            <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"/>
-                          </svg>
-                          Problem Solving
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-            </div>
+          <div>
+            <ul class="word-cloud">
+                <li class="word size1">Leadership Development</li>
+                <li class="word size2">Communication Skills</li>
+                <li class="word size3">Time Management</li>
+                <li class="word size4">Emotional Intelligence</li>
+                <li class="word size5">Conflict Resolution</li>
+                <li class="word size1">Team Building</li>
+                <li class="word size2">Creativity and Innovation</li>
+                <li class="word size3">Customer Service Excellence</li>
+                <li class="word size4">Negotiation Skills</li>
+                <li class="word size5">Change Management</li>
+                <li class="word size1">Diversity and Inclusion</li>
+                <li class="word size2">Presentation Skills</li>
+                <li class="word size3">Sales Training</li>
+                <li class="word size4">Stress Management</li>
+                <li class="word size5">Workplace Ethics</li>
+            </ul>
         </div>
       </div>
     </section>
@@ -633,10 +450,11 @@
               data-wow-delay=".2s"
             >
               <h3 class="ud-contact-form-title">Request Form</h3>
-              <form class="ud-contact-form">
+              <form id="contact-form" class="ud-contact-form" action="mailto:anushkagupta645@gmail.com" method="post" enctype="text/plain">
                 <div class="ud-form-group">
                   <label for="fullName">Full Name*</label>
                   <input
+                    id="fullName"
                     type="text"
                     name="fullName"
                     placeholder="Adam Gelius"
@@ -644,10 +462,11 @@
                   />
                 </div>
                 <div class="ud-form-group">
-                  <label for="fullName">Name of Company*</label>
+                  <label for="company">Name of Company*</label>
                   <input
+                    id="company"
                     type="text"
-                    name="fullName"
+                    name="company"
                     placeholder="xyz ltd."
                     required
                   />
@@ -655,6 +474,7 @@
                 <div class="ud-form-group">
                   <label for="email">Email*</label>
                   <input
+                    id="email"
                     type="email"
                     name="email"
                     placeholder="example@yourmail.com"
@@ -664,6 +484,7 @@
                 <div class="ud-form-group">
                   <label for="phone">Phone*</label>
                   <input
+                    id="phone"
                     type="text"
                     name="phone"
                     placeholder="+91 12545 21155"
@@ -673,6 +494,7 @@
                 <div class="ud-form-group">
                   <label for="message">Brief Description of the Request*</label>
                   <textarea
+                    id="message" 
                     name="message"
                     rows="1"
                     placeholder="type your request here"
@@ -738,6 +560,30 @@
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script>
+      (function() {
+          emailjs.init("fHtBj1lcZnhYcJBVX"); // Replace with your EmailJS Public Key
+      })();
+
+      document.getElementById("contact-form").addEventListener("submit", function(event) {
+          event.preventDefault(); // Prevent form from refreshing the page
+
+          emailjs.send("service_7wo9ecj", "template_1iwejyg", {
+              fullName: document.getElementById("fullName").value,
+              company: document.getElementById("company").value,
+              email: document.getElementById("email").value,
+              phone: document.getElementById("phone").value,
+              message: document.getElementById("message").value
+          }).then(
+              function(response) {
+                  alert("Message sent successfully!");
+              },
+              function(error) {
+                  alert("Failed to send message. Please try again.");
+              }
+          );
+      });
+  </script>
     <script>
       // ==== for menu scroll
       const pageLink = document.querySelectorAll(".ud-menu-scroll");
