--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Play | Open source Project by UIdeck</title>
+    <title>About</title>
 
     <!--====== Favicon Icon ======-->
     <link
@@ -24,6 +24,13 @@
     <header class="ud-header">
       <div>
         <div class="row">
+          <div class="note-text btn-success">
+            <div>
+              We do not charge any additional fees from you for the service.
+            </div>
+        </div>
+        </div>
+        <div class="row">
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="index.html">
@@ -40,31 +47,14 @@
               <div class="navbar-collapse">
                 <ul id="nav" class="navbar-nav mx-auto">
                   <li class="nav-item">
-                    <a class="ud-menu-scroll" href="index.html">Home</a>
+                    <a class="ud-submenu-link" href="index.html">Home</a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="ud-menu-scroll" href="about.html">About</a>
+                    <a class="ud-submenu-link active" href="about.html">About</a>
                   </li>
-                  <li class="nav-item nav-item-has-children">
-                    <a href="javascript:void(0)"> Pages </a>
-                    <ul class="ud-submenu">
-                      <li class="ud-submenu-item">
-                        <a href="about.html" class="ud-submenu-link">
-                          About
-                        </a>
-                      </li>
-                      <li class="ud-submenu-item">
-                        <!-- <a href="pricing.html" class="ud-submenu-link">
-                          Pricing Page
-                        </a> -->
-                      </li>
-                      <li class="ud-submenu-item">
-                        <a href="#contact" class="ud-submenu-link">
-                          Contact Page
-                        </a>
-                      </li>
-                    </ul>
+                  <li class="nav-item">
+                    <a class="ud-submenu-link" href="blog.html">Blog</a>
                   </li>
                 </ul>
               </div>
@@ -76,35 +66,51 @@
     </header>
     <!-- ====== Header End ====== -->
 
-    <!-- ====== Banner Start ====== -->
-    <section class="ud-page-banner">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="ud-banner-content">
-              <h1>About Page</h1>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ====== Banner End ====== -->
 
     <!-- ====== About Start ====== -->
     <section id="about" class="ud-about">
       <div class="container">
-        <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".2s">
-          <div class="ud-about-content-wrapper">
-            <div class="ud-about-content">
-              <span class="tag">About Us</span>
-              <h2>NoHassle | Your Ultimate Sourcing Partner</h2>
-              <p>
-                At NoHassle, we believe in making procurement effortless.With our expert team, verified vendors, and zero-cost services, we’re committed to ensuring your learning and development sourcing journey is smooth, efficient, and hassle-free.
-              </p>
+        <div class="row about-heading">
+          <div class="col-lg-4 col-md-6"><b>About NoHassle</b>
+          </div>
+        </div>
+        <div class="row">
+          <p class="about-desc">Welcome to NoHassle, the trusted sourcing partner for leading corporations. We specialize in connecting top-tier companies with exceptional service providers for diverse Learning & Development needs. Our mission is to ensure a smooth and effective procurement process, allowing you to focus on what truly matters—driving success in your organization.</p>
+          <img class="about-img" src="./assets/images/about/about-page-img.jpeg"/>
+        </div>
+        <div class="row about-heading">
+          <div class="col-lg-4 col-md-6"> <b>Our Vision</b>
+          </div>
+        </div>
+        <div class="row">
+          <p class="about-desc">Transforming the future of corporate L&D through effortless and cost-efficient sourcing.</p>
+        </div>
+       
+        <div><div class="row about-heading about-vision"><div class="col-lg-4 col-md-6"><b>Our Values</b></div></div>
+        <div class="row">
+          <div class="about-card card col-lg-3">
+            <h5 class="card-header">Integrity</h5>
+            <div class="card-body">
+              <p class="card-text">We prioritize honesty and transparency, building trust with every interaction.</p>
             </div>
           </div>
-          <div class="ud-about-image">
-            <img class="about-image" src="assets/images/about/about-image.svg" alt="about-image" />
+          <div class="about-card card col-lg-3">
+            <h5 class="card-header">Agility</h5>
+            <div class="card-body">
+              <p class="card-text">Our streamlined processes deliver swift and effective sourcing, adapting to your unique needs.</p>
+            </div>
+          </div>
+          <div class="about-card card col-lg-3">
+            <h5 class="card-header">Partnership</h5>
+            <div class="card-body">
+              <p class="card-text">We foster strong collaborations, ensuring success for both our clients and service providers.</p>
+            </div>
+          </div>
+          <div class="about-card card col-lg-3">
+            <h5 class="card-header">Excellence</h5>
+            <div class="card-body">
+              <p class="card-text">Committed to quality, we meticulously select vendors to guarantee top-tier services.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -247,32 +253,6 @@
                 </ul>
               </div>
             </div>
-
-            <div class="col-xl-2 col-lg-2 col-md-6 col-sm-6">
-              <div class="ud-widget">
-                <h5 class="ud-widget-title">About Us</h5>
-                <ul class="ud-widget-links">
-                  <li>
-                    <a href="index.html">Home</a>
-                  </li>
-                    <a href="about.html">About</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-xl-2 col-lg-3 col-md-6 col-sm-6">
-              <div class="ud-widget">
-                <h5 class="ud-widget-title">Features</h5>
-                <ul class="ud-widget-links">
-                  <li>
-                    <a href="#features">How it works</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </footer>
     <!-- ====== Footer End ====== -->
 
