--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
                     <a class="ud-submenu-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="ud-submenu-link" href="blog.html">Blog</a>
+                    <a class="ud-submenu-link active" href="blog.html">Blog</a>
                   </li>
                 </ul>
               </div>
@@ -69,7 +69,7 @@
     <!-- ====== Blog Start ====== -->
     <section class="ud-blog-grids">
       <div class="container">
-        <div class="row blog-heading"><div class="col-lg-4 col-md-6">Latest <b>Blogs</b></div></div>
+        <div class="row blog-heading"><div class="col-lg-4 col-md-6"><b>Latest Blogs</b></div></div>
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="ud-single-blog">
@@ -79,7 +79,7 @@
                 </a>
               </div>
               <div class="ud-blog-content">
-                <span class="ud-blog-date">Mar 29, 2025</span>
+                <span class="ud-blog-date">29 Mar, 2025</span>
                 <h3 class="ud-blog-title">
                   <a href="blog-details.html">
                     Importance of Tracking Each Employee's Learning Journey
