--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <div class="navbar-collapse">
                 <ul id="nav" class="navbar-nav mx-auto">
                   <li class="nav-item">
-                    <a class="ud-menu-scroll" href="#">Home</a>
+                    <a class="ud-submenu-link" href="">Home</a>
                   </li>
 
                   <li class="nav-item">
@@ -497,7 +497,7 @@
                     id="message" 
                     name="message"
                     rows="1"
-                    placeholder="type your request here"
+                    placeholder="Type your request here"
                     required
                   ></textarea>
                 </div>
