--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               </div>
               <div class="ud-testimonial-content">
                 <p>
-                  NoHassle transformed our trainer sourcing! Their smart AI-driven vendor discovery enabled fast, efficient onboarding, providing exceptional quality options—all at no additional cost. Highly recommended!
+                  NoHassle transformed our trainer sourcing! Their smart AI-driven vendor discovery enabled fast, efficient onboarding, providing exceptional quality options all at no additional cost. Highly recommended!
                 </p>
               </div>
               <div class="ud-testimonial-info">
@@ -428,7 +428,7 @@
                     <i class="lni lni-map-marker"></i>
                   </div>
                   <div class="ud-info-meta">
-                    <h5>Our Location</h5>
+                    <h5>NoHassle Sourcing Private Limited</h5>
                     <p>Mumbai</p>
                   </div>
                 </div>
